# blackjack_composition

./: Cargo.toml  README.md  record.txt
src/: basic_strategy.rs  bj_helper.rs  bs_1d_h17_ndas_d10.csv  bs_6d_h17.csv  complex_strategy.rs  composition_strategy.rs  deck.rs  hand.rs  main.rs  perfect_strategy.rs  rules.rs  simulation.rs  statistics.rs  strategy_comparison.rs  types.rs
src/charts/: README.md  bs_1d_h17_ndas_d10.csv  bs_6d_h17_das_dany.csv
src/hand/: canonical_hand.rs  composition_hashed.rs  total_hashed.rs
src/perfect_strategy/: hashed_hand.rs
