[package]
name = "blackjack_composition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
derive_more = "0.99.17"
enum-map = "2.4.2"
memoize = { version = "0.4.0", features = ["full"] }
rand = "0.8.5"
